Exposed BFF Election API in Swagger. Removed auth from the Swagger docs, but it is still present on the /api endpoints.
