# routes/open.php
@@ -2,5 +2,5 @@
 
 use Illuminate\Http\Request;
 
-Route::post('calculateResult', 'StatelessElectionController@calculateResult')->name('calculateResult');
+Route::post('calculateResult', 'BffElectionController@calculateResult')->name('calculateResult');
 Route::post('/send_verify_email', 'VerifyController@send_verify_email');
