# storage/api-docs/api-docs.json
@@ -4,9 +4,52 @@
         "title": "Pivot API",
         "version": "0.1.0"
     },
-    "basePath": "/api",
+    "basePath": "/",
     "paths": {
-        "/elections/{electionId}/candidates": {
+        "/open/calculateResult": {
+            "post": {
+                "tags": [
+                    "BFF Election Result"
+                ],
+                "summary": "Run an election using BFF ballots",
+                "operationId": "calculateResult",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "parameters": [
+                    {
+                        "name": "ballots",
+                        "in": "formData",
+                        "description": "One or more BFF ballots, one on each line",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "tieBreaker",
+                        "in": "formData",
+                        "description": "One BFF Ballot for resolving intermediate ties",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "description": "JSON with a key `result` whose value is a BFF election result",
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
+        "/api/elections/{electionId}/candidates": {
             "get": {
                 "tags": [
                     "Candidates"
@@ -80,7 +123,7 @@
                 }
             }
         },
-        "/elections/{electionId}/candidates/{candidateId}": {
+        "/api/elections/{electionId}/candidates/{candidateId}": {
             "get": {
                 "tags": [
                     "Candidates"
@@ -192,7 +235,7 @@
                 }
             }
         },
-        "/elections": {
+        "/api/elections": {
             "get": {
                 "tags": [
                     "Election"
@@ -215,7 +258,7 @@
                 }
             }
         },
-        "/elections/{electionId}": {
+        "/api/elections/{electionId}": {
             "get": {
                 "tags": [
                     "Election"
@@ -247,7 +290,7 @@
                 }
             }
         },
-        "/elections/{electionId}/electors": {
+        "/api/elections/{electionId}/electors": {
             "get": {
                 "tags": [
                     "Electors"
@@ -279,7 +322,7 @@
                 }
             }
         },
-        "/elections/{electionId}/electors/{electorId}": {
+        "/api/elections/{electionId}/electors/{electorId}": {
             "get": {
                 "tags": [
                     "Electors"
@@ -315,7 +358,7 @@
                 }
             }
         },
-        "/elections/{electionId}/invite": {
+        "/api/elections/{electionId}/invite": {
             "get": {
                 "tags": [
                     "Invites"
@@ -389,7 +432,7 @@
                 }
             }
         },
-        "/invite/accept": {
+        "/api/invite/accept": {
             "post": {
                 "tags": [
                     "Invites"
@@ -426,7 +469,7 @@
                 }
             }
         },
-        "/election/{electionId}/result": {
+        "/api/election/{electionId}/result": {
             "get": {
                 "tags": [
                     "Election"
@@ -450,49 +493,6 @@
                             "items": {
                                 "$ref": "#/definitions/Candidate"
                             }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            }
-        },
-        "/calculateResult": {
-            "post": {
-                "tags": [
-                    "Stateless Election Result"
-                ],
-                "summary": "Run a stateless election using BFF ballots",
-                "operationId": "calculateResult",
-                "consumes": [
-                    "application/x-www-form-urlencoded"
-                ],
-                "produces": [
-                    "text/plain"
-                ],
-                "parameters": [
-                    {
-                        "name": "ballots",
-                        "in": "formData",
-                        "description": "One or more BFF ballots, one on each line",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "tieBreaker",
-                        "in": "formData",
-                        "description": "One BFF Ballot for resolving intermediate ties",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "description": "JSON with a key `result` whose value is a BFF election result",
-                            "type": "string"
                         }
                     },
                     "400": {
